<resources>
    <string name="app_name">TripWise</string>
    <string name="create_new_trip">Create New Trip</string>
    <string name="create">Create</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_post">Edit Post</string>
    <string name="update">Update</string>
    <string name="share_a_trip">Share a Trip</string>
    <string name="share">Share</string>
    <string name="edit_timeline_item">Edit Timeline Item</string>
    <string name="add_timeline_item">Add Timeline Item</string>
    <string name="add_item">Add Item</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_you_want_to_delete_this_post_this_action_cannot_be_undone">Are you sure you want to delete this post? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_your_post">Edit your post...</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="you_have_no_trips_to_share_please_create_a_trip_first">You have no trips to share. Please create a trip first.</string>
    <string name="select_a_trip_to_share">Select a Trip to Share</string>
    <string name="select_photos_optional">Select Photos (Optional)</string>
    <string name="no_photos_available_for_this_trip">No photos available for this trip.</string>
    <string name="add_a_caption_optional">Add a Caption (Optional)</string>
    <string name="tell_your_friends_about_this_trip">Tell your friends about this trip...</string>
    <string name="share_trip">Share Trip</string>
    <string name="back">Back</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="choose_a_username">Choose a Username</string>
    <string name="this_will_be_your_unique_public_name_you_can_t_change_it_later">This will be your unique public name. You can\'t change it later.</string>
    <string name="username">Username</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="no_shared_trips_yet_share_your_own_or_add_friends">No shared trips yet. Share your own or add friends!</string>
    <string name="start_a_conversation">Start a Conversation</string>
    <string name="you_don_t_have_any_friends_yet_add_some_to_start_a_chat">You don\'t have any friends yet. Add some to start a chat!</string>
    <string name="user_profile">User profile</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="no_upcoming_trips_tap_to_add_one">No upcoming trips. Tap \'+\' to add one!</string>
    <string name="past_trips">Past Trips</string>
    <string name="no_past_trips_recorded">No past trips recorded.</string>
    <string name="add_trip">Add Trip</string>
    <string name="messages">Messages</string>
    <string name="you_don_t_have_any_conversations_yet_start_a_new_one">You don\'t have any conversations yet. Start a new one!</string>
    <string name="account">Account</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="add_friend">Add Friend</string>
    <string name="my_shared_trips">My Shared Trips</string>
    <string name="you_haven_t_shared_any_trips_yet">You haven\'t shared any trips yet.</string>
    <string name="search_for_users">Search for users...</string>
    <string name="no_users_found">No users found.</string>
    <string name="settings">Settings</string>
    <string name="share_profile">Share Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enter_time">Enter time</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="notes">Notes</string>
    <string name="any_additional_notes_for_the_trip">Any additional notes for the trip...</string>
    <string name="add_images">Add Images</string>
    <string name="clear_images">Clear Images</string>
    <string name="destination">Destination</string>
    <string name="enter_destination">Enter destination</string>
    <string name="start_date">Start Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="flights">Flights</string>
    <string name="flight_details_e_g_airline_flight_numbers_times">Flight details (e.g., airline, flight numbers, times)</string>
    <string name="accommodation">Accommodation</string>
    <string name="hotel_airbnb_etc">Hotel, Airbnb, etc.</string>
    <string name="trip_destination">Trip Destination</string>
    <string name="backtopreviousday">BackToPreviousDay</string>
    <string name="nextday">NextDay</string>
    <string name="no_timeline_items_for_this_day_click_to_add_one">No timeline items for this day. Click \'+\' to add one!</string>
    <string name="options">Options</string>
    <string name="this_is_the_caption_for_the_shared_trip">This is the caption for the shared trip!</string>
    <string name="delete_timeline_item">Delete Timeline Item</string>
    <string name="timeline_image">Timeline Image</string>
    <string name="trip_options">Trip Options</string>
    <string name="home">Home</string>
    <string name="delete_post">Delete Post</string>
    <string name="trip_timeline">Trip Timeline</string>
    <string name="delete_trip">Delete Trip</string>
</resources>