<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_post"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_edited_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_selection_size"
        android:layout_marginTop="@dimen/margin_size"
        android:background="@drawable/rounded_edittext_background"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:hint="@string/edit_your_post"
        android:padding="@dimen/_12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/et_edited_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edited_text" />

</androidx.constraintlayout.widget.ConstraintLayout>